src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;
*,
*::before,
*::after {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

@layer components {
    .sidebar-icon {
        @apply relative flex items-center justify-center
                h-12 w-12 mt-2 mb-2 mx-auto shadow-lg
                bg-gray-800 text-green-500
                hover:bg-green-600 hover:text-white
                rounded-3xl hover:rounded-xl
                transition-all duration-150 ease-linear
                cursor-pointer;
    }

    .sidebar-icon-active {
      @apply relative flex items-center justify-center
              h-12 w-12 mt-2 mb-2 mx-auto shadow-lg
              bg-green-600 text-white
              rounded-xl
              transition-all duration-150 ease-linear
              cursor-pointer;
  }

    .sidebar-tooltip {
        @apply absolute w-auto p-2 m-2 min-w-max left-14
                rounded-md shadow-md
                text-white bg-gray-900
                text-xs font-bold
                transition-all duration-100 scale-0 origin-left;
    }

    .sidebar-hr {
        @apply bg-gray-800 
        border border-gray-800 rounded-full
        mx-2;
    }

    .sidebar-hr-white {
      @apply bg-white 
      border border-white rounded-full
      mx-2;
  }

    .content-container {
      @apply w-screen h-screen m-0 ml-16 bg-gray-800
            overflow-hidden;
    }

    .vertical-timeline-element-title {
      @apply text-center text-white font-bold text-xl
    }

}

